src/objects/Showcase__c.object
<CustomObject>
    <description>Customer showcase information.

Customer use case images should be added as attachments.</description>
    <fields>
        <fullName>Background_Image__c</fullName>
        <description>Background image for the showcase page</description>
        <inlineHelpText>images should be 640w x 1140h</inlineHelpText>
        <label>Background Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <description>Customer name to be displayed in app</description>
        <label>Customer Name</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DemoApp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DemoApp</label>
        <referenceTo>DemoApp__c</referenceTo>
        <relationshipLabel>Showcases</relationshipLabel>
        <relationshipName>Showcases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Use_Case_Description__c</fullName>
        <description>Short, single paragraph description of the customers use case and story</description>
        <label>Use Case Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Showcase</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SC-{0000}</displayFormat>
        <label>Showcase Id</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>